# printcontrol

./: .gitignore  LICENSE.txt  README.md  package-lock.json  package.json  pnpm-lock.yaml
src/: App.css  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/.sqlx/: query-099021a1421d0280707ed56d9c38f10e27108036247e05fca437902309021b4b.json  query-0c0c8462ecc03faf404268ed3f18bfcb88084ccedd443993a88c0c01b36f8a45.json  query-34aa1e177ce05800d27644b395efef0e3302641c6763c6ad4b8328f96710aadd.json  query-61fafdbbc40808375b82ddf6c0f578f1b1aab7ffbd67fcfd3dad767a58114700.json  query-6a8cf5337e0a8a03b52b8371441c04dd4e88d84e17690431881c66d478f7a0bb.json  query-89977609a78b0dd7f5fe1cdf77fdc73de514ec2ff1dc47e4e84fb9023e0e5b59.json  query-8a1c23c997b8d556ee1c74347bed1fe4eb989d1ee5779959fe4e6ac9946fa499.json  query-8d61033ce442710499fbbd3590a078ce17e675e760d26b7eb5fb6d2a220c7aa7.json  query-97a4dba63043c0c16e417cb3a51818a001457af07ec26657e14fdfe937888032.json  query-9ad4ef57120881f4fc5354df9f30841b4c6ffd05556286901fb5a73de1ade1db.json  query-b08fbbba0d01a2be2acc7ec1dab8aec4f45ede2b73bea47eba73a124cd4fb2f6.json  query-c98dbf36c9aff8d4b21db924d1ae08fd8837e6b633312ed9b157b061c014ef55.json  query-df066cd8edab4ca101872687ec7839302aeca83fddebcb8b73bad2141bf1c0e4.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: gen-tray-icons.mjs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: commands.rs  events.rs  mod.rs  state.rs  tray.rs
src-tauri/src/domain/: job.rs  job_status.rs  mod.rs  printer.rs  settings.rs
(+91 files in other folders)
