[package]
name = "printcontrol"
version = "0.2.8"
description = "Sistema de rastreabilidade de impressão"
authors = ["PrintControl Team"]
license = "MIT"
repository = ""
default-run = "printcontrol"
edition = "2021"
rust-version = "1.77"

[lib]
name = "printcontrol_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "printcontrol"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Impressão
printers = "2.3"

# Decodificação de PNG para ícones do tray
image = { version = "0.25", default-features = false, features = ["png"] }

# Banco de dados
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "chrono", "uuid"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Async trait
async-trait = "0.1"

# Utilitários
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
